@@ -69,7 +69,7 @@ public final class Slf4jLogStatement extends BugChecker implements MethodInvocat
      * SLF4J log statements may accept a "marker" as a first argument, before the format string.
      * We ignore such markers.
      */
-    int lTrim = SLF4J_MARKER.matches(args.get(0), state) ? 1 : 0;
+    int lTrim = SLF4J_MARKER.matches(args.getFirst(), state) ? 1 : 0;
     /*
      * SLF4J treats the final argument to a log statement specially if it is a `Throwabe`: it
      * will always choose to render the associated stacktrace, even if the argument has a
@@ -77,13 +77,13 @@ public final class Slf4jLogStatement extends BugChecker implements MethodInvocat
      * the purpose of matching arguments against format string placeholders a trailing
      * `Throwable` effectively doesn't exist.
      */
-    int rTrim = THROWABLE.matches(args.get(args.size() - 1), state) ? 1 : 0;
+    int rTrim = THROWABLE.matches(args.getLast(), state) ? 1 : 0;
     return args.subList(lTrim, args.size() - rTrim);
   }
 
   private static Optional<String> getFormatString(List<? extends ExpressionTree> args) {
     verify(!args.isEmpty(), "Failed to identify SLF4J log method format string");
-    return Optional.ofNullable(ASTHelpers.constValue(args.get(0), String.class));
+    return Optional.ofNullable(ASTHelpers.constValue(args.getFirst(), String.class));
   }
 
   private Description validateFormatString(
@@ -92,7 +92,7 @@ public final class Slf4jLogStatement extends BugChecker implements MethodInvocat
       List<? extends ExpressionTree> args,
       VisitorState state) {
     Description.Builder description = buildDescription(tree);
-    return isFormatString(formatString, args.get(0), state, description)
+    return isFormatString(formatString, args.getFirst(), state, description)
             && hasValidArguments(formatString, args.subList(1, args.size()), description)
         ? Description.NO_MATCH
         : description.build();
@@ -133,9 +133,8 @@ public final class Slf4jLogStatement extends BugChecker implements MethodInvocat
     }
 
     description.setMessage(
-        String.format(
-            "Log statement contains %s placeholders, but specifies %s matching argument(s)",
-            placeholders, args.size()));
+        "Log statement contains %s placeholders, but specifies %s matching argument(s)"
+            .formatted(placeholders, args.size()));
     return false;
   }
 }
