@@ -4,6 +4,7 @@ import com.google.common.collect.ImmutableSet;
 import com.google.errorprone.BugCheckerRefactoringTestHelper;
 import com.google.errorprone.BugCheckerRefactoringTestHelper.FixChoosers;
 import com.google.errorprone.bugpatterns.BugChecker;
+import com.sun.tools.javac.tree.JCTree;
 import com.sun.tools.javac.util.Constants;
 import com.sun.tools.javac.util.Convert;
 import javax.lang.model.element.Name;
@@ -12,7 +13,7 @@ import tech.picnic.errorprone.refaster.test.RefasterRuleCollectionTestCase;
 final class BugCheckerRulesTest implements RefasterRuleCollectionTestCase {
   @Override
   public ImmutableSet<Object> elidedTypesAndStaticImports() {
-    return ImmutableSet.of(Constants.class, Convert.class, FixChoosers.class);
+    return ImmutableSet.of(Constants.class, Convert.class, FixChoosers.class, JCTree.class);
   }
 
   ImmutableSet<BugCheckerRefactoringTestHelper> testBugCheckerRefactoringTestHelperIdentity() {
@@ -31,12 +32,16 @@ final class BugCheckerRulesTest implements RefasterRuleCollectionTestCase {
   }
 
   ImmutableSet<String> testConstantsFormat() {
-    return ImmutableSet.of(Constants.format("foo"), String.format("\"%s\"", Convert.quote("bar")));
+    return ImmutableSet.of(Constants.format("foo"), "\"%s\"".formatted(Convert.quote("bar")));
   }
 
   ImmutableSet<Boolean> testNameContentEquals() {
     return ImmutableSet.of(
         ((Name) null).toString().equals("foo".subSequence(0, 1).toString()),
         ((com.sun.tools.javac.util.Name) null).toString().equals("bar"));
+  }
+
+  int testASTHelpersGetStartPosition() {
+    return ((JCTree) null).getStartPosition();
   }
 }
