@@ -97,8 +97,8 @@ public final class ErrorProneTestHelperSourceFormat extends BugChecker
       return buildDescription(tree).setMessage("No source code provided").build();
     }
 
-    int startPos = ASTHelpers.getStartPosition(sourceLines.get(0));
-    int endPos = state.getEndPosition(sourceLines.get(sourceLines.size() - 1));
+    int startPos = ASTHelpers.getStartPosition(sourceLines.getFirst());
+    int endPos = state.getEndPosition(sourceLines.getLast());
 
     /* Attempt to format the source code only if it fully consists of constant expressions. */
     return getConstantSourceCode(sourceLines)
@@ -117,7 +117,7 @@ public final class ErrorProneTestHelperSourceFormat extends BugChecker
         @SuppressWarnings("java:S1166" /* Stack trace not relevant. */)
         FormatterException e) {
       return buildDescription(methodInvocation)
-          .setMessage(String.format("Source code is malformed: %s", e.getMessage()))
+          .setMessage("Source code is malformed: %s".formatted(e.getMessage()))
           .build();
     }
 
