@@ -58,8 +58,7 @@ public final class UnqualifiedSuggestedFixImport extends BugChecker
   private Description createDescription(
       MethodInvocationTree tree, String method, String alternative) {
     return buildDescription(tree)
-        .setMessage(
-            String.format("Prefer `%s` over direct invocation of `%s`", alternative, method))
+        .setMessage("Prefer `%s` over direct invocation of `%s`".formatted(alternative, method))
         .build();
   }
 }
